--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ body {
   line-height: normal;
   letter-spacing: normal;
   color: #0290ff;
-  margin: 29px 0px 29px 100px;
+  margin: 29px 0 29px 100px;
 }
 
 .books-button {
@@ -62,7 +62,7 @@ body {
   line-height: normal;
   letter-spacing: 1.9px;
   color: #121212;
-  margin: 41px 0px 38px 47px;
+  margin: 41px 0 38px 47px;
 }
 
 .categories-button {
@@ -77,7 +77,7 @@ body {
   line-height: normal;
   letter-spacing: 1.9px;
   color: #121212;
-  margin: 41px 0px 38px 41px;
+  margin: 41px 0 38px 41px;
 }
 
 .user-icon {
@@ -85,4 +85,84 @@ body {
   height: 17px;
   color: #0290ff;
   margin: 37px 113px 41px 678px;
+}
+
+.li-panel {
+  width: 1200px;
+  height: 170px;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.category {
+  width: 49px;
+  height: 18px;
+  opacity: 0.5;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+}
+
+.book-data {
+  margin: 32px 0 0 27px;
+}
+
+.book-progress {
+  display: flex;
+  flex-direction: column;
+  width: 184px;
+  margin: 33px 147px 0 0;
+}
+
+.current-chapter{
+  height: 18px;
+  opacity: 0.5;
+  font-family: 'Roboto Slab', serif;
+  font-size: 13px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+  margin-bottom: 7px;
+}
+
+.chapter {
+  height: 21px;
+  font-family: 'Roboto Slab', serif;
+  font-size: 16px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.4px;
+  color: #121212;
+  margin-bottom: 23px;
+}
+
+.button-text {
+  width: 184px;
+  height: 33px;
+  border-radius: 3px;
+  font-family: 'Roboto Slab', serif;
+  font-size: 13px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: #fff;
+  background-color: #0290ff;
+  border: none;
 }
