--- a/src/index.css
+++ b/src/index.css
@@ -16,17 +16,17 @@ body {
 
 .Bookstore-CMS {
   width: 1600px;
-  height: 1434px;
-  background-color: var(--pale-grey);
+  padding-top: 147px;
+  background-color: #f5f6fa;
 }
 
 .panel-bg {
   width: 1400px;
-  height: 1097px;
   border-radius: 4px;
-  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
   background-color: var(--white);
   margin: 0 auto;
+  background-color: #fafafa;
+  box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.2);
 }
 
 .panel-nav {
@@ -96,6 +96,7 @@ body {
   list-style: none;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 15px;
 }
 
 .category {
@@ -121,6 +122,7 @@ body {
   flex-direction: column;
   width: 184px;
   margin: 33px 147px 0 0;
+  padding-left: 59px;
 }
 
 .current-chapter{
@@ -165,4 +167,65 @@ body {
   color: #fff;
   background-color: #0290ff;
   border: none;
+}
+
+.place-holder-square {
+  background-color: #0290ff;
+  box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.2);
+  width: 90px;
+  height: 90px;
+  margin-top: 38px;
+  margin-left: 350px;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.separation-bar {
+  margin-top: 38px;
+  padding-left: 100px;
+  height: 90px;
+  border-right: solid 1px #e8e8e8;
+}
+
+.book-title {
+  width: 197px;
+  height: 29px;
+  font-family: 'Roboto Slab', serif;
+  font-size: 22px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.2px;
+  color: var(--black-three);
+}
+
+.book-author {
+  width: 107px;
+  height: 19px;
+  font-family: 'Roboto Slab', serif;
+  font-size: 14px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #4386bf;
+  margin-bottom: 21px;
+}
+
+.book-options {
+  height: 19px;
+  font-family: 'Roboto Slab', serif;
+  font-size: 14px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #4386bf;
+  padding-right: 34px;
 }
