--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ body {
   line-height: normal;
   letter-spacing: normal;
   color: #0290ff;
-  margin: 29px 0 29px 100px;
+  margin: 29px -10px 29px 100px;
 }
 
 .books-button {
