--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,21 @@ body {
   margin: 0 auto;
 }
 
+.nav-container {
+  display: flex;
+  width: 85.7%;
+  height: 100%;
+  justify-content: space-between;
+}
+
 .panel-bg {
   width: 95%;
+  min-width: 1100px;
   border-radius: 4px;
   margin: 0 auto;
   background-color: #fafafa;
-  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+    0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
 }
 
 .panel-nav {
@@ -94,11 +103,12 @@ body {
   width: 17px;
   height: 17px;
   color: #0290ff;
-  margin: 37px 113px 41px 0;
+  margin: 37px 0 41px 0;
 }
 
 .li-panel {
   width: 85.7%;
+  min-width: 900px;
   height: 170px;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
@@ -133,7 +143,6 @@ body {
   flex-direction: column;
   width: 184px;
   margin: 33px 0 0 0;
-  padding-left: 59px;
 }
 
 .current-chapter {
@@ -182,8 +191,10 @@ body {
 
 .place-holder-square {
   background-color: #0290ff;
-  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-  width: 90px;
+  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+    0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+  max-width: 90px;
+  min-width: 90px;
   height: 90px;
   margin-top: 38px;
   color: #fff;
@@ -195,7 +206,6 @@ body {
 
 .separation-bar {
   margin-top: 38px;
-  padding-left: 100px;
   height: 90px;
   border-right: solid 1px #e8e8e8;
 }
@@ -245,6 +255,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-width: 250px;
 }
 
 .Line-2 {
@@ -274,7 +285,9 @@ body {
 .form-container {
   border-top: solid 1px #e8e8e8;
   margin: 40px 100px;
-  padding-bottom: 265px;
+  padding-bottom: 65px;
+  width: 85.7%;
+  min-width: 900px;
 }
 
 .vertical-line {
@@ -282,7 +295,7 @@ body {
 }
 
 .add-book-input {
-  width: 634px;
+  width: 50%;
   height: 45px;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
@@ -294,7 +307,7 @@ body {
 }
 
 .category-select {
-  width: 285px;
+  width: 20%;
   height: 45px;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
@@ -307,7 +320,7 @@ body {
 }
 
 .add-book-button {
-  width: 184px;
+  width: 15%;
   height: 45px;
   border-radius: 3px;
   background-color: #0290ff;
@@ -322,4 +335,17 @@ body {
   color: #fff;
   border: none;
   margin-left: 34px;
+}
+
+.right-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 50px;
+  min-width: 400px;
+}
+
+.form {
+  display: flex;
+  justify-content: space-between;
 }
